--- a/index.html
+++ b/index.html
@@ -1,15 +1,68 @@
 <!DOCTYPE html>
-<html lang="eng">
 
-<head>
-    <title>Auri's Website - Work In Progress</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+        <title>&#8962 Home Page</title>
+        <link rel="stylesheet" href="styles.css">
+        <div> <!-- FONTS -->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Yantramanav&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Eczar&display=swap" rel="stylesheet">
+            <link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon">
+        </div>
+    </head>
 
-<body>
-    <img id="Auri-Anagram" src="Images/Auri Anagram outline.png" alt="Auri Anagram">
-    <img id="wrench" src="Images/wrench.png" alt="wrench">
-    <p id="wip">This site is a work in progress,<br>
-    come back soon :)
-    </p>
-</body>
+    <!-- MAIN PAGE -->
+
+    <body class="body-1">
+        <div class="page-content-1"> 
+            <div class="mp-pannel-1">
+                <img id="mp-port-1" src="Images/portwip2.jpg" alt="portwip2"> 
+            </div>
+                
+            <div class="mp-pannel-2">
+                <div class="mp-pannel-2a">
+                    <h1 class="mp-p2-h1">Hi, I'm <span class="name">Auri </span></h1>
+                    <p class="mp-p2-p1"> 
+                        You've made it to my <span class="br1"></span>
+                        website portfolio, yay! 
+                        <span class="br2"></span>
+                        Take a look around!</p>
+                    
+                    <p class="mp-p2-p2">&#11015 links to socials down here &#11015</p>
+                </div>
+                <div class="socials">
+                    <div class="youtube">
+                        <a href="https://www.youtube.com/@AuriLuve" target="_blank">
+                        <img src="Images/youtube logo.png" alt="Youtube"
+                        style="width: 50px;"></a>
+                    </div>
+                    <div class="insta">
+                        <a href="https://www.instagram.com/auri_luve/" target="_blank">
+                        <img src="Images/instagram logo.png" alt="Instagram"
+                        style="width: 50px;"></a>
+                    </div>
+                    <div class="tiktok">
+                        <a href="https://www.tiktok.com/@auri_luve" target="_blank">
+                        <img src="Images/tiktok logo.png" alt="Tiktok"
+                        style="width: 50px;"></a>
+                    </div>
+                    <div class="discord">
+                        <a href="https://discord.gg/yuPxHuxY4F" target="_blank">
+                        <img src="Images/discord logo.png" alt="Discord"
+                        style="width: 50px;"></a>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="mp-pannel-3">
+                <p>Still under construction btw <br>
+                but the icon links work so thats <br>
+                cool!           
+                </p>
+            </div>
+        </div>
+    </body>
+</html>
