--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>&#8962 Home Page</title>
         <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
         <div> <!-- FONTS -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
