--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
     <head>
         <title>&#8962 Home Page</title>
         <link rel="stylesheet" href="styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+        <meta name="viewport" content="width=device-width">
         <div> <!-- FONTS -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Yantramanav&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Eczar&display=swap" rel="stylesheet">
-            <link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon">
         </div>
     </head>
 
@@ -26,12 +25,13 @@
                 <div class="mp-pannel-2a">
                     <h1 class="mp-p2-h1">Hi, I'm <span class="name">Auri </span></h1>
                     <p class="mp-p2-p1"> 
-                        You've made it to my <span class="br1"></span>
-                        website portfolio, yay! 
+                        Welcome to my website <span class="br1"></span>
+                        portfolio! Here you'll <span class="br1"></span>
+                        find snipets of music <span class="br1"></span>
+                        I've created, amongst <span class="br1"></span>
+                        other things too.
                         <span class="br2"></span>
-                        Take a look around!</p>
-                    
-                    <p class="mp-p2-p2">&#11015 links to socials down here &#11015</p>
+                        Enjoy your stay!</p>
                 </div>
                 <div class="socials">
                     <div class="youtube">
@@ -59,10 +59,12 @@
             </div>
 
             <div class="mp-pannel-3">
-                <p>Still under construction btw <br>
-                but the icon links work so thats <br>
-                cool!           
-                </p>
+                <div class="mp-p3-p1">
+                    <p>Still under construction btw <br>
+                    but the icon links work so thats <br>
+                    cool!           
+                    </p>
+                </div>
             </div>
         </div>
     </body>
