--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>&#8962 Home Page</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="breaks.css">
         <meta name="viewport" content="width=device-width">
         <div> <!-- FONTS -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,11 +60,22 @@
             </div>
 
             <div class="mp-pannel-3">
-                <div class="mp-p3-p1">
-                    <p>Still under construction btw <br>
-                    but the icon links work so thats <br>
-                    cool!           
-                    </p>
+                <div class="mp-p3-container">
+                    <div class="mp-p3-bubble" style="z-index: 1;">
+                        <div onclick="location.href='Pages/About Me.html';" class="mp-p3-bb-1">
+                            <a href="Pages/About Me.html" class="btn">About Me</a>
+                        </div>
+                    </div>
+                    <div class="mp-p3-bubble" style="z-index: 2;">
+                        <div onclick="location.href='Pages/Music.html';" class="mp-p3-bb-2">
+                            <a href="Pages/Music.html" class="btn">Music</a>
+                        </div>
+                    </div>
+                    <div class="mp-p3-bubble" style="z-index: 3;">
+                        <div onclick="location.href='Pages/Contact Me.html';" class="mp-p3-bb-3">
+                            <a href="Pages/Contact Me.html" class="btn">Contact Me</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
