--- a/Pages/Music.html
+++ b/Pages/Music.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>&#9834 Music</title>
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../Pages/Music.css">
         <link rel="stylesheet" href="../breaks.css">
         <meta name="viewport" content="width=device-width">
         <div> <!-- FONTS -->
@@ -14,10 +14,10 @@
         </div>
     </head>
 
-    <body class="body-3">
-        <div class="page-content-3">
-            <p class="mp3-p1">Music</p>
-            <a class="mp3-mp" href="../index.html">Back to main page</a>
+    <body class="body">
+        <div class="page-content">
+            <p class="mp-p1">Music</p>
+            <a class="mp-mp" href="../index.html">Back to main page</a>
         </div>
     </body>
 </html>
