--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <!-- MAIN PAGE -->
 
-    <body class="body-1">
-        <div class="page-content-1"> 
+    <body class="body">
+        <div class="page-content"> 
             <div class="mp-pannel-2">
                 <div class="mp-pannel-2a">
                     <h1 class="mp-p2-h1">Hi, I'm <span class="name">Auri </span></h1>
@@ -63,17 +63,17 @@
                 <div class="mp-p3-container">
                     <div class="mp-p3-bubble" style="z-index: 1;">
                         <div onclick="location.href='Pages/About Me.html';" class="mp-p3-bb-1">
-                            <a href="Pages/About Me.html" class="btn">About Me</a>
+                            <p class="bbl-txt">About Me</p>
                         </div>
                     </div>
                     <div class="mp-p3-bubble" style="z-index: 2;">
                         <div onclick="location.href='Pages/Music.html';" class="mp-p3-bb-2">
-                            <a href="Pages/Music.html" class="btn">Music</a>
+                            <p class="bbl-txt">Music</p>
                         </div>
                     </div>
                     <div class="mp-p3-bubble" style="z-index: 3;">
                         <div onclick="location.href='Pages/Contact Me.html';" class="mp-p3-bb-3">
-                            <a href="Pages/Contact Me.html" class="btn">Contact Me</a>
+                            <p class="bbl-txt">Contact Me</p>
                         </div>
                     </div>
                 </div>
