--- a/Pages/About Me.html
+++ b/Pages/About Me.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>&#9786 About Me</title>
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../Pages/AboutMe.css">
         <link rel="stylesheet" href="../breaks.css">
         <meta name="viewport" content="width=device-width">
         <div> <!-- FONTS -->
@@ -14,10 +14,10 @@
         </div>
     </head>
 
-    <body class="body-2">
-        <div class="page-content-2">
-            <p class="mp2-p1">About Me</p>
-            <a class="mp2-mp" href="../index.html">Back to main page</a>
+    <body class="body">
+        <div class="page-content">
+            <p class="mp-p1">About Me</p>
+            <a class="mp-mp" href="../index.html">Back to main page</a>
         </div>
     </body>
 </html>
