--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
         <title>&#8962 Music</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="breaks.css">
-        <meta name ="viewpoint" content ="width=device-width", initial-scale="1" />
+        <!-- <meta name ="viewpoint" content ="width=device-width", initial-scale="1" /> -->
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
