--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="breaks.css">
         <!-- <meta name ="viewpoint" content ="width=device-width", initial-scale="1" /> -->
-                
+        <meta name="viewport" content="height=device-height initial-scale=1">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100&display=swap" rel="stylesheet">
